# dtolator

./: .cursorignore  .gitignore  ADVANCED.md  ANGULAR.md  COVERAGE-ANALYSIS.md  Cargo.toml  JSON-SCHEMA-SUMMARY.md  LICENSE  README.md  RUST-TEST-SUITE.md  TEST-SUMMARY.md  TYPESCRIPT-CHECKING.md  biome.json  build.rs  crash-schema.json  full-sample.json  generate_angular_api.py  githooks.toml  global-setup.ts  package-lock.json  package.json  pyproject.toml  run-tests.bat  run-tests.py  sample-zod.ts  simple-sample.json  test-data-complex.json  test-data-simple.json  test-pydantic.py  test-python-typed-dict.py  test-suite.py  tsconfig.json
.cursor/rules/: rule0.mdc  rust-formatting.mdc  rust-quality.mdc  test-refresh.mdc  test-suite.mdc  windows-cmd-only.mdc
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  security.yml
docs/: cli.md
input-files/: full-sample.json  simple-sample.json  test-data-simple.json  test-deep-nesting.json  test-dotnet-advanced.json  test-empty-schema.json  test-nullable-oneof.json  test-pydantic-advanced.json  test-ref-description.json  test-special-chars.json  test-zod-all-features.json
input-files/edge-cases/: test-empty-schema.json  test-special-chars.json
input-files/generator/: test-pydantic-advanced.json
input-files/json/: test-data-complex.json
input-files/json-schema/: test-zod-all-features.json
input-files/openapi/: full-sample.json  simple-sample.json  test-allof-composition.json  test-array-return-import.json  test-multipart.json  test-multiword-tag.json  test-ref-description.json
output-samples/allof-composition-pydantic/: models.py
output-samples/allof-composition-pydantic-v2/: models.py
output-samples/allof-composition-python-dict/: typed_dicts.py
output-samples/angular-base-url-argument/: dto.ts  index.ts  schema.ts  users-api.ts
output-samples/angular-base-url-none/: schema.ts  users-api.ts
output-samples/angular-ignore-operation-id/: schema.ts  users-api.ts
output-samples/angular-multiword-tag/: api-key-manager-api.ts  dto.ts  (+1 more)
src/: lib.rs  main.rs  openapi.rs
src/generators/: ir.rs  (+15 more)
test-angular-fixed/: analytics-api.ts  categories-api.ts  inventory-api.ts  orders-api.ts  products-api.ts  users-api.ts
test-angular-updated/: categories-api.ts  dto.ts  inventory-api.ts  orders-api.ts  products-api.ts
test-dto-inferred/: dto.ts  inventory-api.ts
test-dto-reexport/: dto.ts  orders-api.ts
test-fixed/: users-api.ts
test-full/: orders-api.ts  products-api.ts
test-no-request-schemas/: dto.ts
test-no-request-schemas-final/: products-api.ts
test-output/: categories-api.ts  default-api.service.ts  dto.ts  users-api.ts
test-output-formatted/: analytics-api.ts  categories-api.ts  dto.ts  orders-api.ts  products-api.ts
test-output-multiple/: orders-api.ts
tests/: integration_tests.rs
ts-stubs/: angular-core.ts  angular-http.ts  rxjs-operators.ts  rxjs-stubs.ts
(+188 files in other folders)
