[package]
name = "dtolator"
version = "0.0.0"
edition = "2024"
description = "Convert OpenAPI schema JSON files to Zod schema definitions or TypeScript interfaces"
license = "MIT"

[lib]
name = "dtolator"
path = "src/lib.rs"

[[bin]]
name = "dtolator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
indexmap = { version = "2.13", features = ["serde"] }

[dev-dependencies]
walkdir = "2.4"
similar = "2.3"
colored = "3.1"
tempfile = "3.25"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
