[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "dtolator"
description = "Convert OpenAPI schema JSON files to Zod schema definitions or TypeScript interfaces"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Ville Vainio", email = "vivainio@gmail.com" }]
keywords = ["openapi", "zod", "typescript", "codegen", "schema"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Code Generators",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/vivainio/dtolator"
Issues = "https://github.com/vivainio/dtolator/issues"

[tool.maturin]
bindings = "bin"
